[tool.poetry]
name = "ukedown"
version = "2.0.0"
description = "Markdown extensions for songsheet creation"
authors = ["Stuart Sears <stuart@sjsears.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.7"
Markdown = ">=3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
